--- a/index.html
+++ b/index.html
@@ -2,24 +2,109 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>김무진</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>1RM 계산기</title>
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            background: white;
             font-family: Arial, sans-serif;
-            text-align: center;
+            margin: 20px;
         }
-        h1 {
-            margin-top: 200px;
-            font-size: 50px;
+        .container {
+            max-width: 500px;
+            margin: auto;
+        }
+        label {
+            font-size: 18px;
             font-weight: bold;
+        }
+        input, select {
+            width: 100%;
+            padding: 10px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            font-size: 16px;
+        }
+        button {
+            width: 100%;
+            padding: 12px;
+            background: black;
+            color: white;
+            border: none;
+            font-size: 18px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 30px;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 12px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>김 무 진</h1>
+
+<div class="container">
+    <h1>NSCA 1RM 계산기</h1>
+    <p>반복 횟수와 무게를 입력하면 1RM부터 10RM까지 계산합니다.</p>
+
+    <label>반복 횟수 (1~10)</label>
+    <input type="number" id="reps" min="1" max="10" placeholder="예: 5">
+
+    <label>무게 (kg)</label>
+    <input type="number" id="weight" placeholder="예: 100">
+
+    <button onclick="calculate()">계산하기</button>
+
+    <table id="resultTable" style="display:none;">
+        <thead>
+            <tr>
+                <th>RM</th>
+                <th>무게(kg)</th>
+            </tr>
+        </thead>
+        <tbody id="resultBody"></tbody>
+    </table>
+</div>
+
+<script>
+function calculate() {
+    const reps = parseInt(document.getElementById("reps").value);
+    const weight = parseFloat(document.getElementById("weight").value);
+
+    if (!reps || !weight || reps < 1 || reps > 10) {
+        alert("정확한 값을 입력하세요 (반복 1~10회)");
+        return;
+    }
+
+    const table = document.getElementById("resultTable");
+    const body = document.getElementById("resultBody");
+    body.innerHTML = ""; 
+
+    // NSCA 공식: 1RM = 무게 × (1 + (0.0333 × 반복수))
+    const oneRM = weight * (1 + reps * 0.0333);
+
+    for (let i = 1; i <= 10; i++) {
+        let rmWeight = oneRM / (1 + 0.0333 * (i - 1));
+        rmWeight = Math.round(rmWeight * 10) / 10;
+
+        body.innerHTML += `
+            <tr>
+                <td>${i}RM</td>
+                <td>${rmWeight}</td>
+            </tr>
+        `;
+    }
+
+    table.style.display = "table";
+}
+</script>
+
 </body>
 </html>
