--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
     th, td {
         padding: 10px;
     }
+    input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type=number] {
+    -moz-appearance: textfield; /* Firefox용 */
+}
 </style>
 </head>
 <body>
