--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>1RM 계산기</title>
+<title>조현성을 위한 1RM 계산기</title>
 <style>
     body {
         background: black;
