--- a/index.html
+++ b/index.html
@@ -16,26 +16,18 @@
         max-width: 340px;
         margin: auto;
     }
-    input, select {
-        width: 100%;
-        padding: 14px;
-        margin: 10px 0;
-        font-size: 18px;
-        border-radius: 10px;
-        border: none;
-        text-align: center;
-    }
-    button {
-        width: 100%;
-        padding: 14px;
-        margin-top: 15px;
-        font-size: 20px;
-        background: white;
-        color: black;
-        border: none;
-        border-radius: 10px;
-        font-weight: bold;
-    }
+    input, select, button {
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+    padding: 14px;
+    margin: 10px 0;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+}
+
     #result { 
         margin-top: 20px; 
         font-size: 22px; 
