--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ input[type=number] {
 <body>
 
 <div class="container">
-    <h2>1RM 계산기</h2>
+    <h2>조현성을 위한 실시간 1RM 계산기</h2>
 
     <!-- 무게를 먼저 -->
     <select id="weight">
