--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>조현성을 위한 1RM 계산기</title>
+<title>1RM 계산기</title>
 <style>
     body {
         background: black;
@@ -16,22 +16,44 @@
         max-width: 340px;
         margin: auto;
     }
+
+    /* 입력칸/선택칸/버튼 동일 가로폭 */
     input, select, button {
-    width: 100%;
-    display: block;
-    box-sizing: border-box;
-    padding: 14px;
-    margin: 10px 0;
-    font-size: 18px;
-    border-radius: 10px;
-    border: none;
-    text-align: center;
-}
+        width: 100%;
+        display: block;
+        box-sizing: border-box;
+        padding: 14px;
+        margin: 10px 0;
+        font-size: 18px;
+        border-radius: 10px;
+        border: none;
+        text-align: center;
+    }
+
+    /* 버튼 스타일 */
+    button {
+        font-size: 20px;
+        background: white;
+        color: black;
+        font-weight: bold;
+        margin-top: 15px;
+    }
+
+    /* 숫자 입력칸 ↑↓ 제거 */
+    input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
 
     #result { 
         margin-top: 20px; 
         font-size: 22px; 
     }
+
     table {
         width: 100%;
         margin-top: 25px;
@@ -44,27 +66,19 @@
     th, td {
         padding: 10px;
     }
-    input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-input[type=number] {
-    -moz-appearance: textfield; /* Firefox용 */
-}
 </style>
 </head>
 <body>
 
 <div class="container">
-    <h2>조현성을 위한 실시간 1RM 계산기</h2>
+    <h2>조현성을 위한 1RM 계산기</h2>
 
-    <!-- 무게를 먼저 -->
+    <!-- 무게 선택 -->
     <select id="weight">
         <option value="">무게 선택</option>
     </select>
 
-    <!-- 반복 두 번째 -->
+    <!-- 반복수 입력 -->
     <input type="number" id="reps" placeholder="반복수 (예: 5)" min="1" max="30">
 
     <!-- GO 버튼 -->
@@ -73,12 +87,12 @@ input[type=number] {
     <!-- 예상 1RM -->
     <div id="result"></div>
 
-    <!-- 표 출력 -->
+    <!-- 1RM~10RM 표 -->
     <div id="tableArea"></div>
 </div>
 
 <script>
-    // ---------- 0~250kg / 5kg 단위 옵션 자동 생성 ----------
+    // 무게 선택 옵션 (0~250kg, 5kg 단위)
     const weightSelect = document.getElementById("weight");
     for (let w = 0; w <= 250; w += 5) {
         let option = document.createElement("option");
@@ -87,7 +101,7 @@ input[type=number] {
         weightSelect.appendChild(option);
     }
 
-    // --------------------- 계산 함수 ---------------------
+    // 계산 함수
     function calculate1RM() {
         const weight = parseFloat(document.getElementById("weight").value);
         const reps = parseInt(document.getElementById("reps").value);
@@ -100,24 +114,22 @@ input[type=number] {
         // Epley 공식
         const oneRM = weight * (1 + reps * 0.0333);
 
-        // 예상 1RM
+        // 예상 1RM 표시
         document.getElementById("result").innerHTML =
             `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
 
-        // 1RM~10RM 표 만들기
+        // 1~10RM 표 생성
         let html = `
             <table>
                 <tr><th>RM</th><th>무게 (kg)</th></tr>
         `;
 
         for (let r = 1; r <= 10; r++) {
-            // RM 공식
             let rmWeight = oneRM / (1 + (r - 1) * 0.0333);
             html += `<tr><td>${r}RM</td><td>${rmWeight.toFixed(1)} kg</td></tr>`;
         }
 
         html += `</table>`;
-
         document.getElementById("tableArea").innerHTML = html;
     }
 </script>
