Add subtitle and style adjustments to index.html"
Added a subtitle with a motivational quote and updated styles.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         margin: auto;
     }
 
+    /* 작은 문구 스타일 */
+    .subtitle {
+        font-size: 12px;
+        opacity: 0.7;
+        margin-bottom: 8px;
+        white-space: nowrap;
+    }
+
     /* 입력칸/선택칸/버튼 동일 가로폭 */
     input, select, button {
         width: 100%;
@@ -66,14 +74,21 @@
     th, td {
         padding: 10px;
     }
+
     h2 {
-    white-space: nowrap;
-}
+        white-space: nowrap;
+    }
 </style>
 </head>
 <body>
 
 <div class="container">
+
+    <!-- 새로 추가된 문구 -->
+    <div class="subtitle">
+        "대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"
+    </div>
+
     <h2>조현성을 위한 1RM 계산기</h2>
 
     <!-- 무게 선택 -->
