--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 
     /* 작은 문구 스타일 */
     .subtitle {
-        font-size: 14px;
-        opacity: 0.7;
-        margin-bottom: 8px;
-        white-space: nowrap;
-    }
+    margin-top: -10px;
+    margin-bottom: 15px;
+    font-size: 14px;  /* 너가 원하면 바꾸면 됨 */
+    text-align: center;
+    white-space: normal; /* 혹시 길어도 자동 줄바꿈 */
+    width: 100%;
+    display: block;
+}
 
     /* 입력칸/선택칸/버튼 동일 가로폭 */
     input, select, button {
