--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     }
 
     /* 작은 문구 스타일 */
-    .subtitle {
-    margin-top: -10px;
-    margin-bottom: 15px;
-    font-size: 14px;  /* 너가 원하면 바꾸면 됨 */
+   .subtitle {
+    font-size: 16px; /* 네가 원한 크기 */
     text-align: center;
-    white-space: normal; /* 혹시 길어도 자동 줄바꿈 */
+    white-space: nowrap; /* 줄바꿈 금지 */
     width: 100%;
     display: block;
+    margin: 0 auto 12px auto; /* 위아래만 간격 */
 }
 
     /* 입력칸/선택칸/버튼 동일 가로폭 */
