섭타이틀 안되네

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     width: 100%;
     display: block;
     margin: 0 auto 12px auto; /* 위아래만 간격 */
+
+         transform: translateX(-8px); /* ← 이거 추가 */
 }
 
     /* 입력칸/선택칸/버튼 동일 가로폭 */
