--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
    .subtitle {
     font-size: 16px; /* 네가 원한 크기 */
     text-align: center;
-    white-space: nowrap; /* 줄바꿈 금지 */
+    white-space: normal;
     width: 100%;
     display: block;
     margin: 0 auto 12px auto; /* 위아래만 간격 */
 
-         transform: translateX(-8px); /* ← 이거 추가 */
+    /*transform: translateX(-8px); /* ← 이거 추가 */
 }
 
     /* 입력칸/선택칸/버튼 동일 가로폭 */
@@ -90,7 +90,7 @@
 
     <!-- 새로 추가된 문구 -->
     <div class="subtitle">
-        "대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"
+        "대부분의 문제는 돈이 없어서,      그 외의 문제는 근육이 없어서 생긴다"
     </div>
 
     <h2>조현성을 위한 1RM 계산기</h2>
