--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     /* 작은 문구 스타일 */
     .subtitle {
         font-size: 16px;
-        white-space: nowrap;
+        white-space: normal;
         width: 100%;
         display: block;
         margin: 0 auto 12px auto;
