--- a/index.html
+++ b/index.html
@@ -13,60 +13,78 @@
         padding: 40px;
     }
     .container {
-        max-width: 340px;
+        max-width: 360px;
         margin: auto;
     }
-    input, select, button {
+
+    .subtitle {
+        font-size: 16px;
+        white-space: normal;
         width: 100%;
+        display: block;
+        margin: 0 auto 12px auto;
+    }
+
+    select, button {
+        width: 100%;
+        display: block;
+        box-sizing: border-box;
         padding: 14px;
         margin: 10px 0;
         font-size: 18px;
         border-radius: 10px;
         border: none;
-        box-sizing: border-box;
-    }
-    select {
         text-align: center;
         text-align-last: center;
     }
+
     button {
         font-size: 20px;
         background: white;
         color: black;
         font-weight: bold;
+        margin-top: 15px;
     }
-    #result { margin-top: 20px; font-size: 22px; }
+
+    #result { 
+        margin-top: 20px; 
+        font-size: 22px; 
+    }
+
     table {
         width: 100%;
         margin-top: 25px;
         border-collapse: collapse;
         font-size: 17px;
     }
-    table, th, td { border: 1px solid white; }
-    th, td { padding: 10px; }
-    .subtitle {
-        font-size: 16px;
-        margin-bottom: 12px;
+    table, th, td {
+        border: 1px solid white;
     }
-    .login-area button {
-        background: #fff;
-        color: #000;
-        margin-top: 5px;
+    th, td {
+        padding: 10px;
     }
+
+    #loginArea {
+        margin-bottom: 20px;
+    }
+
 </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="subtitle">"대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"</div>
+
+    <div class="subtitle">
+        "대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"
+    </div>
 
     <h2>조현성을 위한 1RM 계산기</h2>
 
     <!-- 로그인 영역 -->
-    <div class="login-area">
-        <button onclick="login()">구글 로그인</button>
-        <button onclick="logout()">로그아웃</button>
-        <div id="userInfo"></div>
+    <div id="loginArea">
+        <button id="loginBtn">Google 로그인</button>
+        <button id="logoutBtn" style="display:none;">로그아웃</button>
+        <div id="userInfo" style="margin-top:10px; font-size:15px;"></div>
     </div>
 
     <!-- 무게 선택 -->
@@ -82,64 +100,68 @@
     <!-- GO 버튼 -->
     <button onclick="calculate1RM()">GO</button>
 
-    <!-- 저장버튼 -->
-    <button onclick="saveRecord()">기록 저장</button>
-
     <div id="result"></div>
     <div id="tableArea"></div>
+
+    <!-- 기록 저장 버튼 -->
+    <button id="saveBtn" style="display:none;">기록 저장</button>
+
+    <!-- 저장된 기록 표시 -->
+    <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
+
 </div>
 
-<!-- Firebase -->
-<script type="module">
-    // Firebase SDK 임포트
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-analytics.js";
-    import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged }
-        from "https://www.gstatic.com/firebasejs/10.10.0/firebase-auth.js";
-    import { getFirestore, doc, setDoc }
-        from "https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js";
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
 
-    // Firebase 설정
+<script>
+    // Firebase 설정값 (너 것 그대로)
     const firebaseConfig = {
         apiKey: "AIzaSyCXn174XsW6ndqaeUpVK6XAAf4MR0-q7_k",
         authDomain: "rmpj-7ca13.firebaseapp.com",
         projectId: "rmpj-7ca13",
         storageBucket: "rmpj-7ca13.firebasestorage.app",
         messagingSenderId: "983484366324",
-        appId: "1:983484366324:web:5fd58faba825ee39decda1",
-        measurementId: "G-MNGVMN6QCM"
+        appId: "1:983484366324:web:5fd58faba825ee39decda1"
     };
 
     // Firebase 초기화
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
 
-    // Auth, Firestore
-    const auth = getAuth();
-    const provider = new GoogleAuthProvider();
-    const db = getFirestore();
+    // 요소 가져오기
+    const loginBtn = document.getElementById("loginBtn");
+    const logoutBtn = document.getElementById("logoutBtn");
+    const userInfo = document.getElementById("userInfo");
+    const saveBtn = document.getElementById("saveBtn");
 
-    // 로그인
-    function login() {
-        signInWithPopup(auth, provider)
-            .then(result => {
-                console.log("로그인 성공:", result.user);
-            })
-            .catch(error => console.error(error));
-    }
+    // Google 로그인
+    loginBtn.onclick = () => {
+        const provider = new firebase.auth.GoogleAuthProvider();
+        auth.signInWithPopup(provider);
+    };
 
     // 로그아웃
-    function logout() {
-        signOut(auth).then(() => console.log("로그아웃"));
-    }
+    logoutBtn.onclick = () => auth.signOut();
 
-    // 로그인 상태 표시
-    onAuthStateChanged(auth, (user) => {
-        const info = document.getElementById("userInfo");
+    // 로그인 상태 확인
+    auth.onAuthStateChanged(user => {
         if (user) {
-            info.innerHTML = `로그인: <b>${user.displayName}</b>`;
+            loginBtn.style.display = "none";
+            logoutBtn.style.display = "block";
+            saveBtn.style.display = "block";
+            userInfo.textContent = `${user.displayName} 님`;
+
+            loadLastRecord(); // 마지막 저장 기록 불러오기
         } else {
-            info.innerHTML = "로그인 안됨";
+            loginBtn.style.display = "block";
+            logoutBtn.style.display = "none";
+            saveBtn.style.display = "none";
+            userInfo.textContent = "";
+            document.getElementById("saveResult").textContent = "";
         }
     });
 
@@ -161,8 +183,8 @@
         repsSelect.appendChild(option);
     }
 
-    // 1RM 계산 함수
-    window.calculate1RM = function () {
+    // 1RM 계산
+    function calculate1RM() {
         const weight = parseFloat(weightSelect.value);
         const reps = parseInt(repsSelect.value);
 
@@ -172,45 +194,56 @@
         }
 
         const oneRM = weight * (1 + reps * 0.0333);
-        window.currentOneRM = oneRM; // 전역 저장
-        window.currentWeight = weight;
-        window.currentReps = reps;
+        document.getElementById("result").innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
 
-        document.getElementById("result").innerHTML =
-            `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
-
-        let html = `<table><tr><th>RM</th><th>무게 (kg)</th></tr>`;
+        let html = `
+            <table>
+                <tr><th>RM</th><th>무게 (kg)</th></tr>
+        `;
 
         for (let r = 1; r <= 10; r++) {
-            let rmW = oneRM / (1 + (r - 1) * 0.0333);
-            html += `<tr><td>${r}RM</td><td>${rmW.toFixed(1)} kg</td></tr>`;
+            let rmWeight = oneRM / (1 + (r - 1) * 0.0333);
+            html += `<tr><td>${r}RM</td><td>${rmWeight.toFixed(1)} kg</td></tr>`;
         }
 
         html += `</table>`;
         document.getElementById("tableArea").innerHTML = html;
-    };
+    }
 
     // 기록 저장
-    window.saveRecord = async function () {
+    saveBtn.onclick = async () => {
         const user = auth.currentUser;
-        if (!user) return alert("로그인 먼저 해줘!");
+        if (!user) return;
 
-        if (!window.currentOneRM) return alert("먼저 1RM 계산하고 저장해!");
+        const weight = weightSelect.value;
+        const reps = repsSelect.value;
 
-        const record = {
-            oneRM: window.currentOneRM,
-            weight: window.currentWeight,
-            reps: window.currentReps,
-            timestamp: Date.now()
-        };
+        if (!weight || !reps) {
+            alert("무게와 반복수를 선택하세요!");
+            return;
+        }
 
-        await setDoc(
-            doc(db, "users", user.uid, "records", String(Date.now())),
-            record
-        );
+        await db.collection("users").doc(user.uid).set({
+            weight: weight,
+            reps: reps,
+            savedAt: new Date()
+        });
 
-        alert("저장 완료!");
+        document.getElementById("saveResult").textContent = "기록 저장 완료!";
     };
+
+    // 마지막 기록 불러오기
+    async function loadLastRecord() {
+        const user = auth.currentUser;
+        if (!user) return;
+
+        const doc = await db.collection("users").doc(user.uid).get();
+        if (doc.exists) {
+            const data = doc.data();
+            document.getElementById("saveResult").textContent =
+                `마지막 기록: ${data.weight}kg / ${data.reps}회`;
+        }
+    }
 </script>
 
 </body>
