--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>1RM 계산기</title>
+<title>1RM 계산기 + GitHub 로그인</title>
 <style>
     body {
         background: black;
@@ -12,90 +12,38 @@
         text-align: center;
         padding: 40px;
     }
-    .container {
-        max-width: 360px;
-        margin: auto;
-    }
-
-    .subtitle {
-        font-size: 16px;
-        white-space: normal;
-        width: 100%;
-        display: block;
-        margin: 0 auto 12px auto;
-    }
-
+    .container { max-width: 360px; margin: auto; }
+    .subtitle { font-size:16px; margin-bottom:12px; }
     select, button {
-        width: 100%;
-        display: block;
-        box-sizing: border-box;
-        padding: 14px;
-        margin: 10px 0;
-        font-size: 18px;
-        border-radius: 10px;
-        border: none;
-        text-align: center;
-        text-align-last: center;
+        width:100%; padding:14px; margin:10px 0; font-size:18px;
+        border-radius:10px; border:none; text-align:center;
     }
-
-    button {
-        font-size: 20px;
-        background: white;
-        color: black;
-        font-weight: bold;
-        margin-top: 15px;
-    }
-
-    #result { 
-        margin-top: 20px; 
-        font-size: 22px; 
-    }
-
-    table {
-        width: 100%;
-        margin-top: 25px;
-        border-collapse: collapse;
-        font-size: 17px;
-    }
-    table, th, td {
-        border: 1px solid white;
-    }
-    th, td {
-        padding: 10px;
-    }
-
-    #loginArea {
-        margin-bottom: 20px;
-    }
-
+    button { font-size:20px; background:white; color:black; font-weight:bold; }
+    #result { margin-top:20px; font-size:22px; }
+    table { width:100%; margin-top:25px; border-collapse:collapse; font-size:17px; }
+    table, th, td { border:1px solid white; }
+    th, td { padding:10px; }
+    #loginArea { margin-bottom:20px; }
 </style>
 </head>
 <body>
-
 <div class="container">
-
     <div class="subtitle">
         "대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"
     </div>
-
     <h2>조현성을 위한 1RM 계산기</h2>
 
     <!-- 로그인 영역 -->
     <div id="loginArea">
-        <button id="loginBtn">Google 로그인</button>
+        <button id="githubLoginBtn">GitHub 로그인</button>
         <button id="logoutBtn" style="display:none;">로그아웃</button>
         <div id="userInfo" style="margin-top:10px; font-size:15px;"></div>
     </div>
 
     <!-- 무게 선택 -->
-    <select id="weight">
-        <option value="">무게 선택</option>
-    </select>
-
+    <select id="weight"><option value="">무게 선택</option></select>
     <!-- 반복수 선택 -->
-    <select id="reps">
-        <option value="">반복수 선택</option>
-    </select>
+    <select id="reps"><option value="">반복수 선택</option></select>
 
     <!-- GO 버튼 -->
     <button onclick="calculate1RM()">GO</button>
@@ -105,10 +53,7 @@
 
     <!-- 기록 저장 버튼 -->
     <button id="saveBtn" style="display:none;">기록 저장</button>
-
-    <!-- 저장된 기록 표시 -->
     <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
-
 </div>
 
 <!-- Firebase SDK -->
@@ -117,146 +62,123 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
 <script>
-    // Firebase 설정
-    const firebaseConfig = {
-        apiKey: "AIzaSyCXn174XsW6ndqaeUpVK6XAAf4MR0-q7_k",
-        authDomain: "rmpj-7ca13.firebaseapp.com",
-        projectId: "rmpj-7ca13",
-        storageBucket: "rmpj-7ca13.firebasestorage.app",
-        messagingSenderId: "983484366324",
-        appId: "1:983484366324:web:5fd58faba825ee39decda1"
-    };
+const firebaseConfig = {
+    apiKey: "AIzaSyCXn174XsW6ndqaeUpVK6XAAf4MR0-q7_k",
+    authDomain: "rmpj-7ca13.firebaseapp.com",
+    projectId: "rmpj-7ca13",
+    storageBucket: "rmpj-7ca13.firebasestorage.app",
+    messagingSenderId: "983484366324",
+    appId: "1:983484366324:web:5fd58faba825ee39decda1"
+};
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.firestore();
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+// 요소 가져오기
+const githubLoginBtn = document.getElementById("githubLoginBtn");
+const logoutBtn = document.getElementById("logoutBtn");
+const userInfo = document.getElementById("userInfo");
+const saveBtn = document.getElementById("saveBtn");
 
-    // 요소 가져오기
-    const loginBtn = document.getElementById("loginBtn");
-    const logoutBtn = document.getElementById("logoutBtn");
-    const userInfo = document.getElementById("userInfo");
-    const saveBtn = document.getElementById("saveBtn");
+// 무게 옵션
+const weightSelect = document.getElementById("weight");
+for (let w=0; w<=250; w+=5){
+    let option = document.createElement("option");
+    option.value = w; option.textContent = w+" kg";
+    weightSelect.appendChild(option);
+}
+// 반복수 옵션
+const repsSelect = document.getElementById("reps");
+for (let r=1; r<=10; r++){
+    let option = document.createElement("option");
+    option.value = r; option.textContent = r+" 회";
+    repsSelect.appendChild(option);
+}
 
-    // Google 로그인
-    loginBtn.onclick = (e) => {
-        e.preventDefault();
-        const provider = new firebase.auth.GoogleAuthProvider();
-        auth.signInWithPopup(provider)
-            .then(result => {
-                console.log("로그인 성공:", result.user);
-            })
-            .catch(error => {
-                console.error("로그인 오류:", error);
-                alert("로그인 실패: " + error.message);
-            });
-    };
-
-    // 로그아웃
-    logoutBtn.onclick = (e) => {
-        e.preventDefault();
-        auth.signOut().then(() => console.log("로그아웃 완료"));
-    };
-
-    // 로그인 상태 확인
-    auth.onAuthStateChanged(user => {
-        if (user) {
-            loginBtn.style.display = "none";
-            logoutBtn.style.display = "block";
-            saveBtn.style.display = "block";
-            userInfo.textContent = `${user.displayName} 님`;
-            loadLastRecord();
-        } else {
-            loginBtn.style.display = "block";
-            logoutBtn.style.display = "none";
-            saveBtn.style.display = "none";
-            userInfo.textContent = "";
-            document.getElementById("saveResult").textContent = "";
-        }
-    });
-
-    // 무게 옵션 생성
-    const weightSelect = document.getElementById("weight");
-    for (let w = 0; w <= 250; w += 5) {
-        let option = document.createElement("option");
-        option.value = w;
-        option.textContent = w + " kg";
-        weightSelect.appendChild(option);
+// 1RM 계산
+function calculate1RM(){
+    const weight = parseFloat(weightSelect.value);
+    const reps = parseInt(repsSelect.value);
+    if(!weight || !reps){ document.getElementById("result").innerHTML="무게와 반복수를 입력하세요."; return; }
+    const oneRM = weight*(1+reps*0.0333);
+    document.getElementById("result").innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
+    let html = `<table><tr><th>RM</th><th>무게 (kg)</th></tr>`;
+    for(let r=1;r<=10;r++){
+        let rmWeight = oneRM/(1+(r-1)*0.0333);
+        html += `<tr><td>${r}RM</td><td>${rmWeight.toFixed(1)} kg</td></tr>`;
     }
+    html += `</table>`;
+    document.getElementById("tableArea").innerHTML = html;
+}
 
-    // 반복수 옵션 생성
-    const repsSelect = document.getElementById("reps");
-    for (let r = 1; r <= 10; r++) {
-        let option = document.createElement("option");
-        option.value = r;
-        option.textContent = r + " 회";
-        repsSelect.appendChild(option);
+// GitHub 로그인
+githubLoginBtn.onclick = () => {
+    const provider = new firebase.auth.GithubAuthProvider();
+    auth.signInWithPopup(provider)
+        .then(result=>{
+            console.log("로그인 성공:", result.user);
+        })
+        .catch(error=>{
+            console.error("로그인 오류:", error);
+            alert("로그인 실패: "+error.message);
+        });
+};
+
+// 로그아웃
+logoutBtn.onclick = () => {
+    auth.signOut().then(()=>console.log("로그아웃 완료"));
+};
+
+// 로그인 상태 확인
+auth.onAuthStateChanged(user=>{
+    if(user){
+        githubLoginBtn.style.display="none";
+        logoutBtn.style.display="block";
+        saveBtn.style.display="block";
+        userInfo.textContent = `${user.displayName}님`;
+        loadLastRecord();
+    }else{
+        githubLoginBtn.style.display="block";
+        logoutBtn.style.display="none";
+        saveBtn.style.display="none";
+        userInfo.textContent="";
+        document.getElementById("saveResult").textContent="";
     }
+});
 
-    // 1RM 계산
-    function calculate1RM() {
-        const weight = parseFloat(weightSelect.value);
-        const reps = parseInt(repsSelect.value);
-
-        if (!weight || !reps) {
-            document.getElementById("result").innerHTML = "무게와 반복수를 입력하세요.";
-            return;
-        }
-
-        const oneRM = weight * (1 + reps * 0.0333);
-        document.getElementById("result").innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
-
-        let html = `<table><tr><th>RM</th><th>무게 (kg)</th></tr>`;
-        for (let r = 1; r <= 10; r++) {
-            let rmWeight = oneRM / (1 + (r - 1) * 0.0333);
-            html += `<tr><td>${r}RM</td><td>${rmWeight.toFixed(1)} kg</td></tr>`;
-        }
-        html += `</table>`;
-        document.getElementById("tableArea").innerHTML = html;
+// 기록 저장
+saveBtn.onclick = async ()=>{
+    const user = auth.currentUser;
+    if(!user) return;
+    const weight = weightSelect.value;
+    const reps = repsSelect.value;
+    if(!weight || !reps){ alert("무게와 반복수를 선택하세요!"); return; }
+    try{
+        await db.collection("users").doc(user.uid).set({
+            weight: weight,
+            reps: reps,
+            savedAt: new Date()
+        });
+        document.getElementById("saveResult").textContent="기록 저장 완료!";
+    }catch(error){
+        console.error(error);
+        alert("저장 실패: "+error.message);
     }
+};
 
-    // 기록 저장
-    saveBtn.onclick = async () => {
-        const user = auth.currentUser;
-        if (!user) return;
-
-        const weight = weightSelect.value;
-        const reps = repsSelect.value;
-
-        if (!weight || !reps) {
-            alert("무게와 반복수를 선택하세요!");
-            return;
+// 마지막 기록 불러오기
+async function loadLastRecord(){
+    const user = auth.currentUser;
+    if(!user) return;
+    try{
+        const doc = await db.collection("users").doc(user.uid).get();
+        if(doc.exists){
+            const data = doc.data();
+            document.getElementById("saveResult").textContent=
+                `마지막 기록: ${data.weight}kg / ${data.reps}회`;
         }
-
-        try {
-            await db.collection("users").doc(user.uid).set({
-                weight: weight,
-                reps: reps,
-                savedAt: new Date()
-            });
-            document.getElementById("saveResult").textContent = "기록 저장 완료!";
-        } catch (error) {
-            console.error(error);
-            alert("저장 실패: " + error.message);
-        }
-    };
-
-    // 마지막 기록 불러오기
-    async function loadLastRecord() {
-        const user = auth.currentUser;
-        if (!user) return;
-
-        try {
-            const doc = await db.collection("users").doc(user.uid).get();
-            if (doc.exists) {
-                const data = doc.data();
-                document.getElementById("saveResult").textContent =
-                    `마지막 기록: ${data.weight}kg / ${data.reps}회`;
-            }
-        } catch (error) {
-            console.error(error);
-        }
-    }
+    }catch(error){ console.error(error); }
+}
 </script>
-
 </body>
 </html>
